# genshindata-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
genshindata-processed/: Cargo.toml
genshindata-processed/src/: main.rs
genshindata-processed/src/artifact/: artifact_set.rs  mod.rs
genshindata-processed/src/models/: artifact.rs  mod.rs  traits.rs  translatable.rs
genshindata-processed/src/translation/: mod.rs  translatable.rs
genshindata-rs/: Cargo.toml
genshindata-rs/src/: lib.rs
scripts/: Sync-ExcelBinOutput-Mod.ps1  Sync-ExcelBinOutput.ps1  env.mjs  generate.js  main.mjs  quicktype.mjs  version.mjs
scripts/generate/: excelbinoutput.mjs  languages.mjs
scripts/rust/: enum.mjs
src/: lib.rs
src/excelbinoutput/: AbilityOverrideExcelConfigData.rs  AbilityPropExcelConfigData.rs  AbilityStateResistanceByIDExcelConfigData.rs  AchievementExcelConfigData.rs  AchievementGoalExcelConfigData.rs  ActivityAbilityGroupExcelConfigData.rs  ActivityArenaChallengeChapterExcelConfigData.rs  ActivityArenaChallengeExcelConfigData.rs  ActivityArenaChallengeLevelInfoExcelConfigData.rs  ActivityArenaChallengePreviewExcelConfigData.rs  ActivityBannerExcelConfigData.rs  ActivityChessAffixExcelConfigData.rs  ActivityChessCardExcelConfigData.rs  ActivityChessGearExcelConfigData.rs  ActivityChessLevelExcelConfigData.rs  ActivityChessMapExcelConfigData.rs  ActivityChessMapPointExcelConfigData.rs  ActivityChessPreviewExcelConfigData.rs  ActivityChessScheduleExcelConfigData.rs  ActivityCrystalLinkCondBuffExcelConfigData.rs  ActivityExcelConfigData.rs  (+754 more)
(+1114 files in other folders)
