[package]
name = "genshindata-processed"
version = "4.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
genshindata-rs = { path = "../genshindata-rs" }
serde_json = "1"
